# TechAPI

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  data_addition.yml  data_correction.yml  feature_request.yml
.github/workflows/: refresh-data.yml  test.yml  validate-data.yml
app/: __init__.py  config.py  database.py  dependencies.py  errors.py  main.py
app/models/: __init__.py  brand.py  cpu.py  gpu.py  smartphone.py  soc.py
app/routers/: __init__.py  brands.py  cpus.py  gpus.py  meta.py  smartphones.py  socs.py  utils.py
app/schemas/: __init__.py  brand.py  common.py  cpu.py  gpu.py  serializers.py  smartphone.py  soc.py
app/services/: __init__.py  scoring.py
data/: README.md
data/brand/: amd.json  apple.json  asus.json  google.json  honor.json  huawei.json  intel.json  mediatek.json  motorola.json  nothing.json  nvidia.json  oneplus.json  oppo.json  qualcomm.json  realme.json  samsung.json  sony.json  vivo.json  xiaomi.json
data/brand/at/: emporia.json
data/brand/ca/: ati.json  blackberry.json  matrox.json
data/brand/ch/: stmicroelectronics.json
data/brand/cn/: gpd.json  (+41 more)
docs/: DATA_PIPELINE.md  DEVELOPMENT.md  SPEC.md
scripts/: __init__.py  dump.py  seed.py  validate.py
tests/: conftest.py
tests/integration/: test_brands.py  test_cpus.py  test_dump.py  test_gpus.py  test_meta.py  test_smartphones.py  test_socs.py
tests/unit/: test_data_validation.py  test_pagination.py  test_scoring.py
(+924 files in other folders)
